--- a/mango/config.conf
+++ b/mango/config.conf
@@ -60,7 +60,7 @@ scroller_focus_center=0
 scroller_prefer_center=0
 edge_scroller_pointer_focus=1
 scroller_default_proportion_single=1
-scroller_proportion_preset=0.5,0.8,1.0
+scroller_proportion_preset=0.5,1.0
 
 # Master-Stack Layout Setting
 new_is_master=0
@@ -71,7 +71,7 @@ smartgaps=0
 # Overview Setting
 hotarea_size=10
 enable_hotarea=0
-ov_tab_mode=0
+ov_tab_mode=1
 overviewgappi=5
 overviewgappo=30
 
@@ -122,10 +122,10 @@ gappoh=10
 gappov=10
 scratchpad_width_ratio=0.8
 scratchpad_height_ratio=0.9
-borderpx=4
+borderpx=2
 rootcolor=0x201b14ff
 bordercolor=0x444444ff
-focuscolor=0xc9b890ff
+focuscolor=0xF43F3Fff
 maxmizescreencolor=0x89aa61ff
 urgentcolor=0xad401fff
 scratchpadcolor=0x516c93ff
@@ -178,10 +178,10 @@ bind=SUPER+SHIFT,L,exchange_client,right
 
 # switch window status
 bind=SUPER,g,toggleglobal,
-bind=SUPER,o,toggleoverview,
+bind=SUPER,Tab,toggleoverview,1
 bind=SUPER,V,togglefloating,
-bind=SUPER,f,togglemaxmizescreen,
-bind=SUPER+SHIFT,f,togglefullscreen,
+bind=SUPER,f,switch_proportion_preset,
+bind=SUPER+SHIFT,f,togglefullscreen
 bind=ALT+SHIFT,f,togglefakefullscreen,
 bind=SUPER,i,minimized,
 bind=SUPER+SHIFT,o,toggleoverlay,
