--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,6 +1,6 @@
 [main]
-pad=5x5 center
-font=IosevkaTerm Nerd Font:size=15
+pad=0x0 center
+font=JetBrainsMono Nerd Font:size=13
 letter-spacing=0px
 horizontal-letter-offset=0
 vertical-letter-offset=0
@@ -8,14 +8,14 @@ line-height = 19
 box-drawings-uses-font-glyphs=yes
 initial-window-size-pixels = 1300x800
 
-[csd]
-preferred=none
-size=0
+#[csd]
+#preferred=client
+#size=0
 
 [colors]
 cursor = 000000 ffffff
 
-alpha=0.85
+#alpha=0.85
 background = 181818    
 foreground = e4e4ef   
 
