--- a/mango/config.conf
+++ b/mango/config.conf
@@ -156,7 +156,8 @@ bind=SUPER,R,spawn,fuzzel
 bind=SUPER,q,spawn,foot
 bind=SUPER,b,spawn,~/.config/waybar/scripts/blue.sh
 bind=CTRL+SHIFT,R,spawn,~/.config/mango/screen-rec.sh
-bind=SUPER,Print,spawn,~/screenshot.sh
+bind=SUPER,Print,spawn,~/.config/waybar/scripts/screenshot_fullscreen.sh
+bind=SHIFT,Print,spawn,~/.config/waybar/scripts/screenshot_region.sh
 
 # exit
 bind=SUPER,m,quit
@@ -264,8 +265,12 @@ mousebind=NONE,btn_right,killclient,0
 mousebind=SUPER,scroll_down,focusdir,right
 
 # Axis Bindings
-axisbind=SUPER,UP,viewtoleft_have_client
-axisbind=SUPER,DOWN,viewtoright_have_client
+# axisbind=SUPER,UP,viewtoleft_have_client
+# axisbind=SUPER,DOWN,viewtoright_have_client
+axisbind=SUPER,UP,focusdir,left
+axisbind=SUPER,DOWN,focusdir,right
+axisbind=ALT,DOWN,viewtoright_have_client
+axisbind=ALT,UP,viewtoleft_have_client
 
 
 # layer rule
