--- a/fuzzel/fuzzel.ini
+++ b/fuzzel/fuzzel.ini
@@ -1,5 +1,5 @@
 [main]
-font=IosevkaTerm Nerd Font:size=14
+font=JetBrainsMono Nerd Font:size=13 
 dpi-aware=no
 fields=name,generic,comment,categories,filename,keywords
 terminal=foot -e
